--- a/q2_long_reads_qc/citations.bib
+++ b/q2_long_reads_qc/citations.bib
@@ -1,4 +1,4 @@
-@article{10.1534/g3.119.400864,
+@article{Fukasawa_LongQC,
     author = {Fukasawa, Yoshinori and Ermini, Luca and Wang, Hai and Carty, Karen and Cheung, Min-Sin},
     title = "{LongQC: A Quality Control Tool for Third Generation Sequencing Long Read Data}",
     journal = {G3 Genes|Genomes|Genetics},
