MAINT: Add citations for Minimap2 and Samtools

--- a/q2_long_reads_qc/citations.bib
+++ b/q2_long_reads_qc/citations.bib
@@ -1,10 +1,25 @@
-@article{Fukasawa_LongQC,
-    author = {Fukasawa, Yoshinori and Ermini, Luca and Wang, Hai and Carty, Karen and Cheung, Min-Sin},
-    title = "{LongQC: A Quality Control Tool for Third Generation Sequencing Long Read Data}",
-    journal = {G3 Genes|Genomes|Genetics},
-    volume = {10},
-    number = {4},
-    pages = {1193-1196},
-    year = {2020},
-    month = {04},
+@article{Minimap2,
+    author = {Li, Heng},
+    title = "{Minimap2: pairwise alignment for nucleotide sequences}",
+    journal = {Bioinformatics},
+    volume = {34},
+    number = {18},
+    pages = {3094-3100},
+    year = {2018},
+    month = {05},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/bty191},
+    url = {https://doi.org/10.1093/bioinformatics/bty191},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/34/18/3094/48919122/bioinformatics\_34\_18\_3094.pdf},
+}
+
+@article{li2009sequence,
+  title={The sequence alignment/map format and SAMtools},
+  author={Li, Heng and Handsaker, Bob and Wysoker, Alec and Fennell, Tim and Ruan, Jue and Homer, Nils and Marth, Gabor and Abecasis, Goncalo and Durbin, Richard and 1000 Genome Project Data Processing Subgroup},
+  journal={bioinformatics},
+  volume={25},
+  number={16},
+  pages={2078--2079},
+  year={2009},
+  publisher={Oxford University Press},
 }
