DEV: Add trimming action that uses chopper tool

--- a/q2_minimap2/citations.bib
+++ b/q2_minimap2/citations.bib
@@ -23,3 +23,18 @@
   year={2009},
   publisher={Oxford University Press},
 }
+
+@article{Nanopack2,
+    author = {De Coster, Wouter and Rademakers, Rosa},
+    title = "{NanoPack2: population-scale evaluation of long-read sequencing data}",
+    journal = {Bioinformatics},
+    volume = {39},
+    number = {5},
+    pages = {btad311},
+    year = {2023},
+    month = {05},
+    issn = {1367-4811},
+    doi = {10.1093/bioinformatics/btad311},
+    url = {https://doi.org/10.1093/bioinformatics/btad311},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/39/5/btad311/50394865/btad311.pdf},
+}
